# elm-platform

./: .gitignore  .travis.yml  LICENSE  README.md  UPLOADING.md  appveyor.yml  elm-platform.cabal  elm.cabal  old-build-instructions.md
installers/: BuildFromSource.hs  fubar.sh
installers/mac/: make-installer.sh  preinstall
installers/npm/: .gitignore  .npmignore  PUBLISHING.md  README.md  binaries.json  binding.gyp  binwrap.js  build.c  buildFromSource.js  elmVersion.js  index.js  install.js  package.json  platform.js  prepublish.js
installers/npm/binwrappers/: elm  elm-make  elm-package  elm-reactor  elm-repl
installers/windows/: Nsisfile.nsi  README.md  make_installer.cmd  removefrompath.vbs  updatepath.vbs
src/: BuildFromSource.hs  Main.hs
src/mac/: Distribution.xml  make-installer.sh  postinstall  preinstall  share.pkg  uninstall.sh
src/mac/Resources/en.lproj/: conclusion.rtf
src/mac/helper-scripts/: build.sh  compiler-wrapper  uninstall.sh
src/osx/: Info.plist  make-installer.sh  postinstall  uninstall.sh
src/osx/Elm.pmdoc/: index.xml
src/share/: docs.json  elm-runtime.js  interfaces.data
src/windows/: EnvVarUpdate.nsh  Nsisfile.nsi  README.md  copy_files.cmd  make_installer.cmd  updatepath.vbs
upgrade-docs/: 0.16.md  0.17.md  0.18.md
versions/0.15.1/: README.md  build.sh  cabal.config
