Name:                elm-platform
Version:             0.1
Synopsis:            A bundle of all Elm-related tools.
Description:         A bundle of the Elm compiler, elm-get, elm-server, elm-repl,
                     and elm-doc.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2014 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Simple

Extra-source-files:  changelog.txt
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/evancz/elm-platform.git

Library
  Build-depends:       Elm,
                       elm-repl,
                       elm-get