Name: elm
Version: 0.15

Synopsis:
    Central command line tool for working with Elm.
Description:
    Run any command that starts with elm-* making it very easy to extend the
    set of tools available for users.

Homepage:
    http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2015 Evan Czaplicki

Category: Build Tool

Build-type: Simple
Cabal-version: >=1.9

Extra-source-files: README.md

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-platform.git

Executable elm

    ghc-options: 
        -threaded -O2 -W

    hs-source-dirs:
        src

    Main-is:
        Main.hs

    Build-depends:
        base >=4.2 && <5,
        containers >= 0.3,
        directory,
        elm-compiler >= 0.15 && < 0.16,
        filepath,
        mtl,
        process